@@ -1,5 +1,10 @@
 2004-04-03  Todd Berman  <tberman@sevenl.net>
 
+	* Gui/OutputOptionsPanel.cs:
+	* Gui/CodeGenerationPanel.cs: gettextify
+
+2004-04-03  Todd Berman  <tberman@sevenl.net>
+
 	* Project/CSharpCompilerParameters.cs: duh, refix library target bug
 
 2004-04-01  Todd Berman  <tberman@sevenl.net>
